evaluation notebook added

--- a/Inference-finetuned-model-evaluation.ipynb
+++ b/Inference-finetuned-model-evaluation.ipynb
@@ -601,15 +601,14 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df1 = pd.read_csv('../data/springlab-asr-task-wavs-test-data-v1-wer_cer_results.csv')\n",
+    "df = pd.read_csv('../data/springlab-asr-task-wavs-test-data-v1-wer_cer_results.csv')\n",
     "\n",
-    "\n",
-    "avg_wer = df1['WER'].mean()\n",
-    "avg_cer = df1['CER'].mean()\n",
+    "avg_wer = df['WER'].mean()\n",
+    "avg_cer = df['CER'].mean()\n",
     "\n",
     "print(f\"Average WER: {avg_wer:.4f} ({avg_wer*100:.2f}%)\")\n",
     "print(f\"Average CER: {avg_cer:.4f} ({avg_cer*100:.2f}%)\")\n",
-    "print(f\"Total samples: {df1.shape[0]}\")"
+    "print(f\"Total samples: {df.shape[0]}\")"
    ]
   },
   {
